# TDM-Telegram-Data-Manager

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-build.yml  docker-compose.yml  dockerhubreadme.md  pyproject.toml  requirements.txt  updateapp.sh  updateapp_for_old.sh  updateapp_for_oldversion.sh
src/: main.py  requirements.txt
src/app/: config.py  database.py  downloader.py  exporter.py  filters.py  forwarder.py  jobs.py  logger.py  main.py  netutil.py  schemas.py  telegram_client.py  verify.py
src/app/routers/: auth.py  dialogs.py  jobs.py
src/app/static/css/: style.css
src/app/static/js/: app.js
src/app/templates/: base.html  dialogs.html  jobs.html  settings.html
src/tdm/: cli.py  config.py  forward.py  forwarder.py  logger.py  main.py  storage.py  telegram_client.py  ui.py  utils.py  verify.py
src/tdm/routers/: settings.py
src/tdm/static/js/: app.js
src/tdm/templates/: base.html  dialogs.html  index.html  login.html
src/tests/: test_database.py
tdm/: __init__.py  auth.py  database.py  download.py  exporter.py  filters.py
