[project]
name = "tdm"
version = "0.1.0"
description = "Telegram Data Manager - a yt-dlp/rclone-style CLI for managing Telegram data via MTProto"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.36",
    "rich>=13.7",
    "typer>=0.12",
    "pydantic>=2.6",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
tdm = "tdm.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tdm*"]
