[project]
name = "telegram-data-manager"
version = "0.1.0"
description = "Web-based Telegram data backup, export and management tool (FastAPI + Telethon)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "starlette==0.37.2",
    "uvicorn[standard]==0.30.1",
    "telethon==1.36.0",
    "sqlalchemy==2.0.30",
    "jinja2==3.1.4",
    "python-multipart==0.0.9",
    "pydantic==2.7.4",
    "pydantic-settings==2.2.1",
    "paramiko==3.4.0",
    "aiofiles==23.2.1",
]

[project.scripts]
tdm-web = "app.main:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
